...

    /** The screen for searching, previewing, and starting routines. Includes an optional routineId to open directly. */
    SEARCH("Search",
        Icons.Filled.Search, "Search", "search?routineId={routineId}"),

    /** The screen for creating a new routine. */
    ADD("Add", Icons.Filled.Add, "Add", "add"),

    /** The screen that displays the user's workout history. */
    STATS("Stats", Icons.Filled.Done, "Stats", "stats"),

    /** The screen that displays the user's profile information. */
    PROFILE("Profile",
...
